--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         const db = getFirestore(app);
 
         // Chutes.ai API KEY (閲覧用)
-        const SYSTEM_API_KEY = ''; // ←あなたのChutes.aiのキーを入れてください
+        const SYSTEM_API_KEY = 'cpk_2e9498f987914bd697799c5e55961598.4b7f1379e5fd584a8708c89da5014f0d.ZLov3HxeOWBvj1aFDILjudjoRoOsoHSH'; // ←あなたのChutes.aiのキーを入れてください
 
         const { createApp } = Vue;
 
