--- a/creator.html
+++ b/creator.html
@@ -3,141 +3,108 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TextMimic Studio - 作成</title>
+    <title>TextMimic Admin</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
-    <style> body { font-family: 'Inter', 'Noto Sans JP', sans-serif; } .loader { border: 3px solid rgba(255,255,255,0.3); border-radius: 50%; border-top: 3px solid #fff; width: 20px; height: 20px; animation: spin 1s linear infinite; } @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } } </style>
+    <style>body { font-family: sans-serif; }</style>
 </head>
-<body class="bg-slate-100 text-slate-800 min-h-screen pb-20">
-    <div id="app" class="max-w-4xl mx-auto">
-        <header class="bg-white border-b border-slate-200 p-4 sticky top-0 z-10 flex justify-between items-center shadow-sm">
-            <div class="flex items-center gap-2">
-                <div class="w-8 h-8 bg-indigo-600 rounded-lg flex items-center justify-center text-white font-bold">M</div>
-                <span class="font-bold text-slate-900">TextMimic Studio</span>
-            </div>
-            <div class="flex gap-3">
-                <a href="index.html" class="text-sm font-bold text-slate-500 hover:text-slate-800 flex items-center">キャンセル</a>
-                <button @click="publishMaker" :disabled="isPublishing" class="bg-indigo-600 hover:bg-indigo-700 text-white text-sm font-bold px-4 py-2 rounded-lg transition shadow-md flex items-center gap-2">
-                    <span v-if="isPublishing" class="loader w-4 h-4 border-2"></span>
-                    <span v-else>公開する 🚀</span>
-                </button>
-            </div>
-        </header>
+<body class="bg-slate-100 text-slate-800 p-8">
+    <div id="app" class="max-w-4xl mx-auto bg-white p-6 rounded-xl shadow">
+        <div class="flex justify-between items-center mb-6">
+            <h1 class="text-2xl font-bold">👮‍♂️ 管理ダッシュボード</h1>
+            <a href="index.html" class="text-blue-600 hover:underline">サイトに戻る</a>
+        </div>
+        
+        <p class="mb-4 text-sm text-slate-500">
+            登録されているユーザー投稿一覧です。不適切なコンテンツは削除してください。<br>
+            <span class="text-red-500 font-bold">※削除すると元に戻せません。</span>
+        </p>
 
-        <main class="p-6 grid grid-cols-1 lg:grid-cols-2 gap-8">
-            <!-- 左側：設定 -->
-            <div class="space-y-6">
-                <div class="bg-white p-6 rounded-2xl shadow-sm border border-slate-200">
-                    <h2 class="text-lg font-bold mb-4">🛠 基本設定</h2>
-                    <div class="space-y-4">
-                        <div>
-                            <label class="block text-xs font-bold text-slate-500 uppercase mb-1">アイコン (Emoji)</label>
-                            <input v-model="form.emoji" type="text" class="text-3xl w-16 h-16 text-center border border-slate-300 rounded-xl focus:ring-2 focus:ring-indigo-500 focus:outline-none">
-                        </div>
-                        <div>
-                            <label class="block text-xs font-bold text-slate-500 uppercase mb-1">メーカー名</label>
-                            <input v-model="form.title" type="text" class="w-full p-3 border border-slate-300 rounded-xl font-bold" placeholder="例：関西弁おかんメーカー">
-                        </div>
-                        <div>
-                            <label class="block text-xs font-bold text-slate-500 uppercase mb-1">説明文</label>
-                            <input v-model="form.description" type="text" class="w-full p-3 border border-slate-300 rounded-xl" placeholder="短い説明...">
-                        </div>
-                    </div>
-                </div>
-                <div class="bg-white p-6 rounded-2xl shadow-sm border border-slate-200 ring-2 ring-indigo-50">
-                    <h2 class="text-lg font-bold mb-2 text-indigo-700">🧠 AIへの指示 (プロンプト)</h2>
-                    <textarea v-model="form.systemPrompt" class="w-full h-40 p-4 border border-indigo-200 rounded-xl focus:ring-2 focus:ring-indigo-500 resize-none bg-indigo-50/30 text-sm" placeholder="例：あなたは〇〇です。入力された文章を〇〇に変換してください。"></textarea>
-                </div>
-            </div>
+        <div v-if="loading" class="text-center py-10">読み込み中...</div>
 
-            <!-- 右側：テスト -->
-            <div class="space-y-6">
-                <div class="bg-slate-800 text-white p-6 rounded-2xl shadow-xl">
-                    <h2 class="text-lg font-bold mb-4">🧪 動作テスト</h2>
-                    <input v-model="testInput" type="text" class="w-full p-3 bg-slate-700 border border-slate-600 rounded-xl text-white mb-2" placeholder="テスト用テキスト...">
-                    <button @click="runTest" :disabled="!testInput || isLoading" class="w-full bg-indigo-500 hover:bg-indigo-400 text-white font-bold py-3 rounded-xl transition flex justify-center items-center gap-2">
-                        <span v-if="isLoading" class="loader"></span>
-                        <span v-if="!isLoading">テスト実行 ▶</span>
-                    </button>
-                    <div v-if="testResult" class="mt-6 pt-6 border-t border-slate-700 bg-slate-900 p-4 rounded-xl whitespace-pre-wrap">{{ testResult }}</div>
-                </div>
+        <div v-else class="overflow-x-auto">
+            <table class="w-full border-collapse text-left text-sm">
+                <thead>
+                    <tr class="bg-slate-50 border-b">
+                        <th class="p-3">ID</th>
+                        <th class="p-3">タイトル</th>
+                        <th class="p-3">プロンプト (一部)</th>
+                        <th class="p-3">操作</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr v-for="maker in makers" :key="maker.id" class="border-b hover:bg-slate-50">
+                        <td class="p-3 font-mono text-xs text-slate-400">{{ maker.id }}</td>
+                        <td class="p-3 font-bold flex items-center gap-2">
+                            <span class="text-xl">{{ maker.emoji }}</span>
+                            {{ maker.title }}
+                        </td>
+                        <td class="p-3 text-slate-500 truncate max-w-xs">{{ maker.systemPrompt }}</td>
+                        <td class="p-3">
+                            <button @click="deleteMaker(maker.id)" class="bg-red-100 text-red-600 px-3 py-1 rounded hover:bg-red-200 font-bold text-xs">
+                                削除 🗑
+                            </button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+            <div v-if="makers.length === 0" class="text-center py-10 text-slate-400">
+                投稿はありません。
             </div>
-        </main>
+        </div>
     </div>
 
-    <!-- Firebase SDK -->
     <script type="module">
-        // ▼▼▼ ここにも同じFirebase設定を貼り付けてください ▼▼▼
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js";
-        import { getFirestore, collection, addDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js";
+        import { getFirestore, collection, getDocs, orderBy, query, deleteDoc, doc } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js";
 
-        // ↓↓↓ Config上書き ↓↓↓
+        // ▼▼▼ Firebase Config (ここも同じものを貼ってください) ▼▼▼
         const firebaseConfig = {
-  apiKey: "AIzaSyCgSNCKuPIdi-7P7hJDv3NcCKp_cjPRlB4",
-  authDomain: "aihenkan-7f101.firebaseapp.com",
-  projectId: "aihenkan-7f101",
-  storageBucket: "aihenkan-7f101.firebasestorage.app",
-  messagingSenderId: "695320170916",
-  appId: "1:695320170916:web:a1317704b02970b1c07131",
-  measurementId: "G-G4DW26MH4L"
+            apiKey: "...",
+            authDomain: "...",
+            projectId: "...",
+            storageBucket: "...",
+            messagingSenderId: "...",
+            appId: "..."
         };
-        // ↑↑↑↑↑↑
+        // ▲▲▲
 
         const app = initializeApp(firebaseConfig);
         const db = getFirestore(app);
-
-        // Chutes.ai API KEY (テスト用)
-        const SYSTEM_API_KEY = 'cpk_2e9498f987914bd697799c5e55961598.4b7f1379e5fd584a8708c89da5014f0d.ZLov3HxeOWBvj1aFDILjudjoRoOsoHSH'; // ←あなたのChutes.aiのキーを入れてください
 
         const { createApp } = Vue;
 
         createApp({
             data() {
                 return {
-                    form: { emoji: '🐯', title: '', description: '', systemPrompt: '' },
-                    testInput: '', testResult: '', isLoading: false, isPublishing: false
+                    makers: [],
+                    loading: true
                 }
             },
+            async mounted() {
+                await this.fetchMakers();
+            },
             methods: {
-                async runTest() {
-                    if (!this.testInput) return;
-                    this.isLoading = true;
-                    this.testResult = '';
+                async fetchMakers() {
+                    this.loading = true;
                     try {
-                        if (!SYSTEM_API_KEY) { 
-                            await new Promise(r => setTimeout(r, 1000));
-                            this.testResult = "【デモ】APIキー未設定"; this.isLoading = false; return; 
-                        }
-                        const response = await fetch('https://llm.chutes.ai/v1/chat/completions', {
-                            method: 'POST',
-                            headers: { 'Content-Type': 'application/json', 'Authorization': `Bearer ${SYSTEM_API_KEY}` },
-                            body: JSON.stringify({
-                                model: "openai/gpt-oss-20b",
-                                messages: [ { role: "system", content: this.form.systemPrompt }, { role: "user", content: this.testInput } ],
-                                temperature: 0.7
-                            })
-                        });
-                        const data = await response.json();
-                        this.testResult = data.choices[0].message.content;
-                    } catch (error) { alert("Error: " + error.message); } finally { this.isLoading = false; }
-                },
-                async publishMaker() {
-                    if(!this.form.title || !this.form.systemPrompt) { alert("タイトルとプロンプトは必須です"); return; }
-                    this.isPublishing = true;
-                    try {
-                        // Firestoreにデータを保存
-                        await addDoc(collection(db, "makers"), {
-                            ...this.form,
-                            createdAt: serverTimestamp() // 作成日時
-                        });
-                        alert("公開しました！🎉 ホームに戻ります。");
-                        window.location.href = "index.html"; // ホームへリダイレクト
-                    } catch (error) {
-                        alert("保存エラー: " + error.message);
-                        console.error(error);
+                        const q = query(collection(db, "makers"), orderBy("createdAt", "desc"));
+                        const querySnapshot = await getDocs(q);
+                        this.makers = querySnapshot.docs.map(doc => ({ id: doc.id, ...doc.data() }));
+                    } catch (e) {
+                        alert("読み込みエラー: " + e.message);
                     } finally {
-                        this.isPublishing = false;
+                        this.loading = false;
+                    }
+                },
+                async deleteMaker(id) {
+                    if (!confirm("本当に削除しますか？")) return;
+                    try {
+                        await deleteDoc(doc(db, "makers", id));
+                        this.makers = this.makers.filter(m => m.id !== id); // 画面からも消す
+                        alert("削除しました。");
+                    } catch (e) {
+                        alert("削除失敗: " + e.message);
                     }
                 }
             }
