--- a/admin.html
+++ b/admin.html
@@ -60,12 +60,13 @@
 
         // ▼▼▼ Firebase Config (ここも同じものを貼ってください) ▼▼▼
         const firebaseConfig = {
-            apiKey: "...",
-            authDomain: "...",
-            projectId: "...",
-            storageBucket: "...",
-            messagingSenderId: "...",
-            appId: "..."
+  apiKey: "AIzaSyCgSNCKuPIdi-7P7hJDv3NcCKp_cjPRlB4",
+  authDomain: "aihenkan-7f101.firebaseapp.com",
+  projectId: "aihenkan-7f101",
+  storageBucket: "aihenkan-7f101.firebasestorage.app",
+  messagingSenderId: "695320170916",
+  appId: "1:695320170916:web:a1317704b02970b1c07131",
+  measurementId: "G-G4DW26MH4L"
         };
         // ▲▲▲
 
