--- a/index.html
+++ b/index.html
@@ -103,7 +103,9 @@
                                 <span v-if="isLoading" class="loader"></span>
                                 <span v-if="!isLoading">変換スタート ⚡</span>
                             </button>
-                            
+                            <!-- admax -->
+<script src="https://adm.shinobi.jp/s/243ffa4401dd31f9cda77e9d4bfe7662"></script>
+<!-- admax -->
                             <!-- 結果表示エリア -->
                             <div v-if="outputText" class="bg-indigo-50 rounded-xl p-6 border border-indigo-100 mt-4 animate-fade-in">
                                 <div class="text-slate-800 leading-relaxed whitespace-pre-wrap">{{ outputText }}</div>
