--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@
             </transition>
         </main>
 
-        <!-- ▼▼▼ 広告エリア（フッター直前に配置） ▼▼▼ -->
+        <!-- ▼▼▼ 広告エリア（新しいタグに変更済み） ▼▼▼ -->
         <div class="w-full flex justify-center items-center py-6 bg-slate-50">
             <!-- admax -->
-            <script src="https://adm.shinobi.jp/s/243ffa4401dd31f9cda77e9d4bfe7662"></script>
+            <script src="https://adm.shinobi.jp/s/d4fdf1e0ba29e4b3df7b5c11cb257727"></script>
             <!-- admax -->
         </div>
         <!-- ▲▲▲ 広告エリア終了 ▲▲▲ -->
