--- a/index.html
+++ b/index.html
@@ -118,17 +118,10 @@
                 </div>
             </transition>
         </main>
-
-        <!-- ▼▼▼ 広告エリア（新しいタグに変更済み） ▼▼▼ -->
-        <div class="w-full flex justify-center items-center py-6 bg-slate-50">
-            <!-- admax -->
-            <script src="https://adm.shinobi.jp/s/d4fdf1e0ba29e4b3df7b5c11cb257727"></script>
-            <!-- admax -->
-        </div>
-        <!-- ▲▲▲ 広告エリア終了 ▲▲▲ -->
-
+        
         <footer class="p-6 text-center text-slate-400 text-xs">© 2024 TextMimic</footer>
     </div>
+    <!-- ▲ #appの終了タグ ▲ -->
 
     <!-- Firebase SDK -->
     <script type="module">
@@ -237,5 +230,12 @@
             }
         }).mount('#app');
     </script>
+
+    <!-- ▼▼▼ 広告タグ（インタースティシャル用） ▼▼▼ -->
+    <!-- Vueの管理範囲外(#appの外)、かつ body終了直前に配置します -->
+    <!-- admax -->
+    <script src="https://adm.shinobi.jp/s/d4fdf1e0ba29e4b3df7b5c11cb257727"></script>
+    <!-- admax -->
+
 </body>
 </html>
