feat(settings): add model selection menu and GLM-4.5-Air support

--- a/index.html
+++ b/index.html
@@ -24,9 +24,14 @@
                 <div class="w-8 h-8 bg-indigo-600 rounded-lg flex items-center justify-center text-white font-bold text-lg">M</div>
                 <span class="text-xl font-extrabold tracking-tight text-slate-900">TextMimic</span>
             </div>
-            <a href="creator.html" class="bg-slate-900 text-white text-sm font-bold px-4 py-2 rounded-lg hover:bg-slate-800 transition">
-                + 作る
-            </a>
+            <div class="flex items-center gap-4">
+                <button @click="showSettingsModal = true" class="text-slate-500 hover:text-slate-800 transition p-2 rounded-lg hover:bg-slate-100" title="設定">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l.22-.39a2 2 0 0 0-.73-2.73l-.15-.1a2 2 0 0 1-1-1.74v-.47a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.39a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"></path><circle cx="12" cy="12" r="3"></circle></svg>
+                </button>
+                <a href="creator.html" class="bg-slate-900 text-white text-sm font-bold px-4 py-2 rounded-lg hover:bg-slate-800 transition">
+                    + 作る
+                </a>
+            </div>
         </nav>
 
         <main class="flex-1 p-4 md:p-6">
@@ -130,6 +135,34 @@
             </div>
             <p>© 2024 TextMimic by Tokyo10104184</p>
         </footer>
+
+        <!-- 設定モーダル -->
+        <div v-if="showSettingsModal" class="fixed inset-0 z-50 flex items-center justify-center modal-overlay" @click.self="showSettingsModal = false">
+            <div class="bg-white rounded-2xl shadow-2xl p-6 max-w-sm w-full mx-4">
+                <div class="flex justify-between items-center mb-6">
+                    <h2 class="text-xl font-bold text-slate-900">⚙️ 設定</h2>
+                    <button @click="showSettingsModal = false" class="text-slate-400 hover:text-slate-600 text-2xl">&times;</button>
+                </div>
+                
+                <div class="space-y-4">
+                    <div>
+                        <label class="block text-sm font-bold text-slate-700 mb-2">AIモデル</label>
+                        <select v-model="selectedModel" class="w-full p-3 border border-slate-200 rounded-xl bg-slate-50 focus:ring-2 focus:ring-indigo-500 outline-none appearance-none">
+                            <option v-for="model in availableModels" :key="model.id" :value="model.id">
+                                {{ model.name }}
+                            </option>
+                        </select>
+                        <p class="text-xs text-slate-400 mt-2">※ モデルによって生成速度や品質が異なります。</p>
+                    </div>
+                </div>
+
+                <div class="mt-8">
+                    <button @click="showSettingsModal = false" class="w-full bg-slate-900 text-white font-bold py-3 rounded-xl hover:bg-slate-800 transition">
+                        OK
+                    </button>
+                </div>
+            </div>
+        </div>
 
         <!-- 利用規約モーダル -->
         <div v-if="showTermsModal" class="fixed inset-0 z-50 flex items-center justify-center modal-overlay" @click.self="showTermsModal = false">
@@ -299,6 +332,13 @@
                     showTermsModal: false,
                     showPrivacyModal: false,
                     showOperatorModal: false,
+                    showSettingsModal: false,
+                    // 設定
+                    selectedModel: 'openai/gpt-oss-20b',
+                    availableModels: [
+                        { id: 'openai/gpt-oss-20b', name: 'gpt-oss-20b' },
+                        { id: 'zai-org/GLM-4.5-Air', name: 'zai-org/GLM-4.5-Air' }
+                    ],
                     // ① 公式メーカー（プリセット）
                     officialMakers: [
                         { id: 'off_1', emoji: '😇', title: '聖人君子メール', description: '怒りを極めて冷静なビジネスメールに。', systemPrompt: 'あなたは超一流のビジネスマンです。感情的な文章を、意味を変えずに丁寧で円滑なビジネスメールに書き換えてください。' },
@@ -352,7 +392,7 @@
                             method: 'POST',
                             headers: { 'Content-Type': 'application/json', 'Authorization': `Bearer ${SYSTEM_API_KEY}` },
                             body: JSON.stringify({
-                                model: "openai/gpt-oss-20b",
+                                model: this.selectedModel,
                                 messages: [
                                     { role: "system", content: this.currentMaker.systemPrompt },
                                     { role: "user", content: this.inputText }
