--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
         body { font-family: 'Inter', 'Noto Sans JP', sans-serif; }
+        [v-cloak] { display: none; }
         .fade-enter-active, .fade-leave-active { transition: opacity 0.3s ease; }
         .fade-enter-from, .fade-leave-to { opacity: 0; }
         .loader { border: 3px solid rgba(255,255,255,0.3); border-radius: 50%; border-top: 3px solid #fff; width: 20px; height: 20px; animation: spin 1s linear infinite; }
@@ -18,7 +19,7 @@
     </style>
 </head>
 <body class="bg-slate-50 text-slate-800 min-h-screen">
-    <div id="app" class="max-w-5xl mx-auto min-h-screen flex flex-col">
+    <div id="app" v-cloak class="max-w-5xl mx-auto min-h-screen flex flex-col">
         <!-- ナビ -->
         <nav class="flex items-center justify-between p-6">
             <div class="flex items-center gap-2 cursor-pointer" @click="goHome">
